add header styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="header__pages">
-      <a href="./index.html" class="logo logo--header">
+      <a href="#" class="logo logo--header">
         SIMPLY CHOCOLATE
 
         <svg class="logo__icon">
@@ -31,14 +31,18 @@
     </div>
     <ul class="header-social">
       <li class="header-social__item">
-        <svg class="header-social__icon">
+        <a href="#" class="header-social__link">
+          <svg class="header-social__icon">
             <use href="#"></use>
-        </svg>
+          </svg>
+        </a>
       </li>
       <li class="header-social__item">
-        <svg class="header-social__icon">
+        <a href="#" class="header-social__link">
+          <svg class="header-social__icon">
             <use href="#"></use>
-        </svg>
+          </svg>
+        </a>
       </li>
     </ul>
   </div>
