--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,29 +1,36 @@
 <section class="hero">
-  <div class="container">
-    <div class="scroll-down">
-      <span class="scroll-down__span">scroll down</span>
-      <button class="scroll-down__btn" type="button">
-        <svg class="scroll-down__icon">
-            <use href="#"></use>
-        </svg>
-      </button>
+  <div class="backdrop">
+    <div class="container">
+      <p class="hero__text">
+        Treat yourself or a loved one to our finest ingredients for a moment of
+        pure delight!
+      </p>
+      <div class="hero__pages">
+        <ul class="hero-options">
+          <li class="hero-options__item">
+            <button
+              class="hero-options__btn hero-options__btn--light"
+              type="button"
+            >
+              Buy now
+            </button>
+          </li>
+          <li class="hero-options__item">
+            <button class="hero-options__btn" type="button">
+              How it’s made
+            </button>
+          </li>
+        </ul>
+        <div class="scroll-down">
+          <a href="#footer" class="scroll-down__link"
+            >scroll down
+            <button class="scroll-down__btn" type="button">
+              <svg class="scroll-down__icon">
+                <use href="#"></use>
+              </svg></button
+          ></a>
+        </div>
+      </div>
     </div>
-    <p class="hero__text">
-      Treat yourself or a loved one to our finest ingredients for a moment of
-      pure delight!
-    </p>
-    <ul class="hero-options">
-      <li class="hero-options__item">
-        <button
-          class="hero-options__btn hero-options__btn--light"
-          type="button"
-        >
-          Buy now
-        </button>
-      </li>
-      <li class="hero-options__item">
-        <button class="hero-options__btn" type="button">How it’s made</button>
-      </li>
-    </ul>
   </div>
 </section>
