add hero styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header__pages">
       <a href="#" class="logo logo--header">
-        SIMPLY CHOCOLATE
+        <span class="logo__span"> SIMPLY</span> CHOCOLATE
 
         <svg class="logo__icon">
           <use href="#"></use>
