--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -81,7 +81,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     color: #fff;
     margin-bottom: 32px;
 
@@ -138,7 +138,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 12px;
-    line-height: 117%;
+    line-height: 1.17;
     color: #fff;
 
     display: flex;
