--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -24,9 +24,8 @@
 }
 .logo {
   font-family: 'Montserrat', sans-serif;
-  font-style: italic;
   font-weight: 700;
-  line-height: 111%;
+  line-height: 1.11;
   color: #111;
   text-transform: uppercase;
   @media (min-width: 1200px) {
@@ -40,6 +39,9 @@
       height: 24px;
     }
   }
+  &__span {
+    font-style: italic;
+  }
 }
 .nav-list {
   display: none;
@@ -49,7 +51,7 @@
     justify-content: center;
     gap: 24px;
   }
-  &__item{
+  &__item {
     position: relative;
   }
 
@@ -57,7 +59,7 @@
     @media (min-width: 1200px) {
       font-family: 'Montserrat', sans-serif;
       font-weight: 500;
-      line-height: 114%;
+      line-height: 1.14;
       color: #111;
 
       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
