add styles social

--- a/src/partials/social.html
+++ b/src/partials/social.html
@@ -1,4 +1,4 @@
-<section class="socials">
+<section class="socials" id="social">
     <div class="container">
     <h2 class="social__title">exPLORE OUR NEW CHOCOLATE FIRST</h2>
     <p class="social__info">
