fixe header bags

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="header">
   <div class="container">
     <div class="header__pages">
       <a href="#" class="logo logo--header">
@@ -12,19 +12,19 @@
       <nav class="navigation">
         <ul class="nav-list">
           <li class="nav-list__item">
-            <a href="#" class="nav-list__link">Home </a>
+            <a href="#header" class="nav-list__link">Home </a>
           </li>
           <li class="nav-list__item">
-            <a href="#" class="nav-list__link">How it’s made? </a>
+            <a href="#proces" class="nav-list__link">How it’s made? </a>
           </li>
           <li class="nav-list__item">
-            <a href="#" class="nav-list__link">Our products </a>
+            <a href="#product" class="nav-list__link">Our products </a>
           </li>
           <li class="nav-list__item">
-            <a href="#" class="nav-list__link">Top sellers </a>
+            <a href="#sellers" class="nav-list__link">Top sellers </a>
           </li>
           <li class="nav-list__item">
-            <a href="#" class="nav-list__link">Chocolate is loved </a>
+            <a href="#reviews" class="nav-list__link">Chocolate is loved </a>
           </li>
         </ul>
       </nav>
