--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,10 +1,10 @@
 <section class="hero">
   <div class="backdrop">
     <div class="container">
-      <p class="hero__text">
+      <h1 class="hero__title">
         Treat yourself or a loved one to our finest ingredients for a moment of
         pure delight!
-      </p>
+      </h1>
       <div class="hero__pages">
         <ul class="hero-options">
           <li class="hero-options__item">
