--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
   <div class="backdrop">
     <div class="container">
       <p class="hero__text">
