add styles and change htm
v/1.1

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer" id="footer">
     <div class="container">
+      <div class="footer-top">
     <section class="chocomood">
       <p class="chocomood__text">
         <span class="chocomood__text chocomood__text--orange"
@@ -12,6 +13,8 @@
       <h2 class="footer-contacts__title">Contact us</h2>
       <a href="tel:+380684439426" class="footer-contacts__tel">+380 (68) 443-94-26</a>
       <a href="mailto:simplychoc@gmail.com" class="footer-contacts__mail">simplychoc@gmail.com</a>
+    </section>
+     <section class="footer-socials">
       <ul class="footer-media">
         <li class="footer-media__item">
           <a href="#" class="footer-media__link">
@@ -28,25 +31,28 @@
           </a>
         </li>
       </ul>
-    </section>
-    <div class="footer-nav">
+    </div>
+  </section>
+    <div class="footer-down">
+    
       <ul class="footer-nav-list">
         <li class="footer-nav-list__item">
-          <a href="#" class="footer-nav-list__link">Home</a>
+          <a href="#header" class="footer-nav-list__link">Home</a>
         </li>
         <li class="footer-nav-list__item">
-          <a href="#" class="footer-nav-list__link">How it’s made?</a>
+          <a href="#proces" class="footer-nav-list__link">How it’s made?</a>
         </li>
         <li class="footer-nav-list__item">
-          <a href="#" class="footer-nav-list__link">Our products</a>
+          <a href="#product" class="footer-nav-list__link">Our products</a>
         </li>
         <li class="footer-nav-list__item">
-          <a href="#" class="footer-nav-list__link">Top sellers</a>
+          <a href="#sellers" class="footer-nav-list__link">Top sellers</a>
         </li>
         <li class="footer-nav-list__item">
-          <a href="#" class="footer-nav-list__link">Chocolate is loved</a>
+          <a href="#revievs" class="footer-nav-list__link">Chocolate is loved</a>
         </li>
       </ul>
+    
     </div>
-    </section>
+    
   </footer>
