--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -76,7 +76,7 @@
       justify-content: space-between;
     }
   }
-  &__text {
+  &__title {
     max-width: 299px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
