rework hero__title

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <div class="backdrop">
     <div class="container">
-      <p class="hero__text">
+      <p class="hero__title">
         Treat yourself or a loved one to our finest ingredients for a moment of
         pure delight!
       </p>
