--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -36,3 +36,20 @@ input {
   outline: none;
   border: none;
 }
+
+.swiper-pagination {
+  display: flex;
+  gap: 13px;
+}
+
+.swiper-pagination-bullet {
+  width: 13px;
+  height: 13px;
+  background-color: rgba(17, 17, 17, 0.3);
+}
+
+.swiper-pagination-bullet-active {
+  width: 28px;
+  background-color: getColor('text-third');
+  border-radius: 15px;
+}
