--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -6,14 +6,14 @@
       <div class="swiper products-slider">
       <ul class="products-list swiper-wrapper">
         <li class="products-list__item swiper-slide">
-          <img class="products-list__img" src="#" alt="chocolate" srcset="" />
+          <img class="products-list__img" src="#" alt="chocolate"  />
           <h3 class="products-list__title">ORANGE</h3>
           <p class="products-list__name">Dark chocolate</p>
           
           <button class="products-list__btn" type="button">45 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
-          <img class="products-list__img" src="#" alt="chocolate" srcset="" />
+          <img class="products-list__img" src="#" alt="chocolate"  />
           <h3 class="products-list__title">APPLE&CRANBERRY</h3>
           <p class="products-list__name">Milk chocolate</p>
           
@@ -21,7 +21,7 @@
         </li>
 
         <li class="products-list__item swiper-slide">
-          <img class="products-list__img" src="#" alt="chocolate" srcset="" />
+          <img class="products-list__img" src="#" alt="chocolate"  />
           <h3 class="products-list__title">LIME&SEA SALT</h3>
           <p class="products-list__name">Dark chocolate</p>
          
@@ -29,21 +29,21 @@
         </li>
 
         <li class="products-list__item swiper-slide">
-          <img class="products-list__img" src="#" alt="chocolate" srcset="" />
+          <img class="products-list__img" src="#" alt="chocolate"  />
           <h3 class="products-list__title">PINEAPPLE</h3>
           <p class="products-list__name">Dark chocolate</p>
           
           <button class="products-list__btn" type="button">54 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="#" alt="chocolate" srcset="" />
+            <img class="products-list__img" src="#" alt="chocolate"  />
             <h3 class="products-list__title">CLASSIC</h3>
             <p class="products-list__name">Milk chocolate</p>
             
             <button class="products-list__btn" type="button">45 UAH</button>
           </li>
           <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="#" alt="chocolate" srcset="" />
+            <img class="products-list__img" src="#" alt="chocolate"  />
             <h3 class="products-list__title">HONEY</h3>
             <p class="products-list__name">Milk chocolate</p>
             
@@ -51,7 +51,7 @@
           </li>
     
           <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="#" alt="chocolate"srcset="" />
+            <img class="products-list__img" src="#" alt="chocolate" />
             <h3 class="products-list__title">ROASTED FRUITS</h3>
             <p class="products-list__name">Dark chocolate</p>
            
@@ -59,7 +59,7 @@
           </li>
     
           <li class="products-list__item swiper-slide">
-            <img class="products-list__img" src="#" alt="chocolate" srcset="" />
+            <img class="products-list__img" src="#" alt="chocolate" />
             <h3 class="products-list__title">CLASSIC</h3>
             <p class="products-list__name">White chocolate</p>
             
