--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -1,24 +1,24 @@
 .social {
- background-image: url("/images/backrounds/mobsocialsbg.jpg");
+ background-image: url("../images/backrounds/mobsocialsbg.jpg");
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
   @media (min-width:320px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url("/images/backrounds/mobsocialsbg@2x.jpg");
+    background-image: url("../images/backrounds/mobsocialsbg@2x.jpg");
   }
 @media (min-width:768px){
      
-    background-image: url("/images/backrounds/tabsocialsbg.jpg");
+    background-image: url("../images/backrounds/tabsocialsbg.jpg");
   }
   @media (min-width:768px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url("/images/backrounds/tabsocialsbg@2x.jpg");
+    background-image: url("../images/backrounds/tabsocialsbg@2x.jpg");
   }
 @media (min-width:1200px){
-    background-image: url("/images/backrounds/descsocialbg.jpg");
+    background-image: url("../images/backrounds/descsocialbg.jpg");
   }
 
   @media (min-width:1200px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url("/images/backrounds/descsocialsbg@2x.jpg");
+    background-image: url("../images/backrounds/descsocialsbg@2x.jpg");
   }
 padding: 66px;
 @media(min-width: 768px){
@@ -28,9 +28,9 @@ padding: 66px;
     padding: 70px;
 }
 
-}
 
-.social__title {
+
+&__title {
     font-family: 'Montserrat', sans-serif;
 font-weight: 600;
 font-size: 20px; 
@@ -38,7 +38,7 @@ line-height: 1.20;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 text-align: center;
-color: #fff;
+color: getColor(white);
 margin-bottom: 33px;
 @media(min-width: 768px){
     font-size: 24px;
@@ -51,7 +51,7 @@ margin-bottom: 33px;
 
 }
 }
-.social__info {
+&__info {
     font-family: 'Montserrat', sans-serif ;
 font-weight: 400;
 font-size: 14px;
@@ -60,7 +60,7 @@ font-size: 14px;
 line-height: 1.29;
 letter-spacing: 0.02em;
 text-align: center;
-color: #fff;
+color: getColor("white");
 margin-bottom: 33px;
 
 }
@@ -72,9 +72,9 @@ height: 41px;
 font-family:'Montserrat', sans-serif ;
 font-weight: 600;
 font-size: 18px;
-color: #fff;
+color: getColor("white");
 margin: 0 auto;
-background-color: darkorange;
+background-color: getColor("orange");
 @media(min-width: 768px){
 padding: 14px 40px;
 width: 172px;
@@ -87,10 +87,11 @@ padding: 14px 40px;
 width: 172px;
 height: 50px;
 }
-
+&:hover{
+  background-color: getColor("orange");
+  color: getColor("orange");
+  
+  }
 }
-.social__btn:hover{
-background-color: orange;
-color: chocolate;
 
 }
