add header icons

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,14 +33,14 @@
       <li class="header-social__item">
         <a href="#" class="header-social__link">
           <svg class="header-social__icon">
-            <use href="#"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="header-social__item">
         <a href="#" class="header-social__link">
           <svg class="header-social__icon">
-            <use href="#"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
