--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -23,10 +23,10 @@
   }
 }
 .logo {
-  font-family: getFont("Montserrat");
+  font-family: getFont('Montserrat');
   font-weight: 700;
   line-height: 1.11;
-  color: getColor("black");
+  color: getColor('black');
   text-transform: uppercase;
   @media (min-width: 1200px) {
     font-size: 18px;
@@ -57,10 +57,10 @@
 
   &__link {
     @media (min-width: 1200px) {
-      font-family: getFont("Montserrat");
+      font-family: getFont('Montserrat');
       font-weight: 500;
       line-height: 1.14;
-      color: getColor("black");
+      color: getColor('black');
 
       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -72,7 +72,7 @@
         left: 0;
         width: 0;
         height: 1px;
-        background-color: getColor("orange");
+        background-color: getColor('orange');
         transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
       }
       &:hover::after {
@@ -80,7 +80,7 @@
       }
 
       &:hover {
-        color: getColor("orange")
+        color: getColor('orange');
       }
     }
   }
@@ -96,13 +96,13 @@
 
   &__icon {
     @media (min-width: 1200px) {
-      fill: getColor("black");
+      fill: getColor('black');
       width: 24px;
       height: 24px;
-      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
       &:hover {
-        fill: getColor("orange");
+        fill: getColor('orange');
       }
     }
   }
