--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -5,21 +5,21 @@
       <ul class="reviews-list swiper-wrapper">
         <li class="reviews-list__item swiper-slide">
             <div class="reviews-card">
-          <img class="reviews-card__img" src="#" srcset="" alt="client">
+          <img class="reviews-card__img" src="#" srcset="#" alt="client">
           <h3 class="reviews-card__name">Victoria Dobrzhanka</h3>
           <p class="reviews-card__description">I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
         </div>
         </li>
         <li class="reviews-list__item swiper-slide">
             <div class="reviews-card">
-          <img class="reviews-card__img" src="#" srcset="" alt="client">
+          <img class="reviews-card__img" src="#" srcset="#" alt="client">
           <h3 class="reviews-card__name">Nazar Bobenko</h3>
           <p class="reviews-card__description">This chocolate confection is a delight! A delight! The wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
         </div>
         </li>
         <li class="reviews-list__item swiper-slide">
             <div class="reviews-card">
-          <img class="reviews-card__img" src="#" srcset="" alt="client">
+          <img class="reviews-card__img" src="#" srcset="#" alt="client">
           <h3 class="reviews-card__name">Olena Kampusch</h3>
           <p class="reviews-card__description">Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
         </div>
