add logo header icon

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         <span class="logo__span"> SIMPLY</span> CHOCOLATE
 
         <svg class="logo__icon">
-          <use href="#"></use>
+          <use href="./images/icons/symbol-defs.svg#icon-chocolate"></use>
         </svg>
       </a>
 
