add burger menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,10 @@
 <header class="header" id="header">
   <div class="container">
+    <button class="menu-open" data-open-menu>
+      <svg class="menu-open__icon">
+        <use href="./images/icons/symbol-defs.svg#icon-menu"></use>
+      </svg>
+    </button>
     <div class="header__pages">
       <a href="#" class="logo logo--header">
         <span class="logo__span"> SIMPLY</span> CHOCOLATE
