--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/common';
 @import './base/reset';
 @import './components/header';
+@import './components/menu';
 @import './components/hero';
 @import './components/benefits';
 @import './components/ingredients';
