--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -79,6 +79,13 @@
     font-weight: 600;
     color: getColor("white");
     margin: 0 auto;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+    &:hover{
+      color: getColor("orange");
+      background-color: #fcf1e0;
+    }
 
     @media (min-width: 768px) {
       margin-left: 65%;
