--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,22 +11,22 @@
     </section>
     <section class="footer-contacts">
       <h2 class="footer-contacts__title">Contact us</h2>
-      <a href="tel:+380684439426" class="footer-contacts__tel">+380 (68) 443-94-26</a>
-      <a href="mailto:simplychoc@gmail.com" class="footer-contacts__mail">simplychoc@gmail.com</a>
+      <a href="tel:+380684439426" class="footer-contacts__connection">+380 (68) 443-94-26</a>
+      <a href="mailto:simplychoc@gmail.com" class="footer-contacts__connection">simplychoc@gmail.com</a>
     </section>
      <section class="footer-socials">
       <ul class="footer-media">
         <li class="footer-media__item">
           <a href="#" class="footer-media__link">
             <svg class="footer-media__svg">
-              <use href="#"></use>
+              <use href="/src/images/icons/symbol-defs.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
         <li class="footer-media__item">
           <a href="#" class="footer-media__link">
             <svg class="footer-media__svg">
-              <use href="#"></use>
+              <use href="/src/images/icons/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
