--- a/src/partials/social.html
+++ b/src/partials/social.html
@@ -7,6 +7,6 @@
       with only the finest ingredients and handcrafted with the utmost care,
       each piece is a work of art that is sure to please.
     </p>
-    <button type="button" class="social__btn">Subscribe</button>
+    <button type="button" class="social__btn" data-open-subscribe>Subscribe</button>
     </div>
   </section>
