--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -3,23 +3,26 @@
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
-  @media (min-width:320px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  @media  (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: url("../images/backrounds/mobsocialsbg@2x.jpg");
   }
 @media (min-width:768px){
      
     background-image: url("../images/backrounds/tabsocialsbg.jpg");
+    @media (min-width:768px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url("../images/backrounds/tabsocialsbg@2x.jpg");
+    }
   }
-  @media (min-width:768px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url("../images/backrounds/tabsocialsbg@2x.jpg");
-  }
+  
 @media (min-width:1200px){
     background-image: url("../images/backrounds/descsocialbg.jpg");
+
+    @media (min-width:1200px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url("../images/backrounds/descsocialsbg@2x.jpg");
+    }
   }
 
-  @media (min-width:1200px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: url("../images/backrounds/descsocialsbg@2x.jpg");
-  }
+ 
 padding: 66px;
 @media(min-width: 768px){
     padding: 79px;
@@ -50,8 +53,6 @@ margin: 0 auto 33px;
 
 }
 @media(min-width: 1200px){
-    font-size: 24px;
-    line-height: 1.17;
     text-align: center;
 
 }
@@ -61,7 +62,7 @@ margin: 0 auto 33px;
     font-family: 'Montserrat', sans-serif ;
 font-weight: 400;
 font-size: 14px;
-
+ 
  
 line-height: 1.29;
 letter-spacing: 0.02em;
@@ -69,9 +70,6 @@ text-align: center;
 color: getColor("white");
 margin: 0 auto 33px;
 max-width: 467px;
-@media(min-width: 768px){
- text-align: center;
-}
 @media(min-width: 1200px){
  text-align: center;
 
