--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,5 +1,7 @@
 .backdrop {
-  padding: 395px 16px 70px;
+  max-width: 335px;
+  margin: 0 auto;
+  padding: 395px 16px 27px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -18,6 +20,7 @@
   }
 
   @media (min-width: 768px) {
+    min-width: 704px;
     padding: 671px 40px 40px;
     background-image: url('../images/backrounds/tabhero.jpg');
 
@@ -32,6 +35,8 @@
     }
   }
   @media (min-width: 1200px) {
+    max-width: 1136px;
+
     padding-top: 381px;
     background-image: url('../images/backrounds/deschero.jpg');
 
@@ -183,7 +188,7 @@
   &__icon {
     width: 14px;
     height: 18px;
-    fill: getColor("orange");
+    fill: getColor('orange');
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover {
