--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -23,6 +23,7 @@ body {
   margin: 0 auto;
 }
 button {
+  background-color: getColor("orange");
   display: block;
   cursor: pointer;
   border: none;
