--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,4 +1,4 @@
-<div class="mobile-menu" mobile-menu>
+<div class="mobile-menu is-hidden" mobile-menu>
   <div class="menu-container">
     <button type="button" class="menu-close" data-close-menu>
       <svg class="menu-close__icon">
