--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
 
       <button class="menu-open" data-open-menu>
         <svg class="menu-open__icon">
-          <use href="./images/icons/symbol-defs.svg#icon-menu"></use>
+          <use href="./images/icons/symbol-defs.svg#icon-menu-burger"></use>
         </svg>
       </button>
       <nav class="navigation">
