--- a/src/sass/components/_burger-menu.scss
+++ b/src/sass/components/_burger-menu.scss
@@ -78,19 +78,20 @@
 .menu-container {
   width: 100%;
   height: 100%;
-  position: relative;
-  padding: 136px 40px;
+  // position: relative;
+  padding: 136px 0 23px;
 
   @media (min-width: 768px) {
-    padding: 156px 81px;
+    padding: 156px 81px 27px;
   }
 }
 .menu-nav {
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 24px;
+  padding: 0 40px;
+  margin-bottom: 460px;
 
   &__item {
     position: relative;
@@ -125,13 +126,13 @@
 }
 .menu-social {
   display: flex;
-  align-items: center;
-  justify-content: center;
   gap: 18px;
+  padding-left: 20px;
 
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+
+  // position: absolute;
+  // bottom: 20px;
+  // left: 20px;
   @media (min-width: 768px) {
     left: 32px;
     bottom: 24px;
