--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -26,9 +26,12 @@
             >scroll down
             <button class="scroll-down__btn" type="button">
               <svg class="scroll-down__icon">
-                <use href="./images/icons/symbol-defs.svg#icon-hero-Arrow"></use>
-              </svg></button
-          ></a>
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-hero-Arrow"
+                ></use>
+              </svg>
+            </button>
+          </a>
         </div>
       </div>
     </div>
