--- a/src/sass/components/_burger-menu.scss
+++ b/src/sass/components/_burger-menu.scss
@@ -5,12 +5,16 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 62vw;
+  z-index: 9;
+  width: 220px;
   height: 100%;
   background-color: getColor('dark-purple');
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
   transform: translateX(0);
+  @media (min-width: 768px) {
+    width: 290px;
+  }
 }
 .is-hidden {
   transform: translateX(100%);
@@ -57,8 +61,14 @@
   right: 20px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: #fcf1e0;
+  }
+  &:hover,
+  &:focus &__icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #f16529;
   }
   @media (min-width: 768px) {
     top: 24px;
@@ -70,7 +80,8 @@
     height: 14px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover {
+    &:hover,
+    &:focus {
       fill: #f16529;
     }
   }
@@ -78,20 +89,23 @@
 .menu-container {
   width: 100%;
   height: 100%;
-  // position: relative;
   padding: 136px 0 23px;
 
   @media (min-width: 768px) {
-    padding: 156px 81px 27px;
+    padding: 156px 0 27px;
   }
 }
 .menu-nav {
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   flex-direction: column;
   gap: 24px;
-  padding: 0 40px;
+  padding: 0 35px;
   margin-bottom: 460px;
+  @media (min-width: 768px) {
+    padding: 0 70px;
+  }
 
   &__item {
     position: relative;
@@ -112,30 +126,32 @@
       background-color: getColor('orange');
       transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &:hover::after {
+    &:hover::after,
+    &:focus::after {
       width: 50%;
     }
 
-    &:hover {
+    &:hover,
+    &:focus {
       color: getColor('orange');
-    }
-    @media (min-width: 768px) {
-      font-weight: 600;
     }
   }
 }
 .menu-social {
   display: flex;
   gap: 18px;
-  padding-left: 20px;
+  padding: 0 0 22px 20px;
 
-
-  // position: absolute;
-  // bottom: 20px;
-  // left: 20px;
   @media (min-width: 768px) {
-    left: 32px;
-    bottom: 24px;
+    padding-left: 32px;
+  }
+
+  &__link {
+    &:hover,
+    &:focus .menu-social__icon {
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      fill: getColor('orange');
+    }
   }
   &__icon {
     fill: getColor('white');
@@ -144,7 +160,8 @@
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover {
+    &:hover,
+    &:focus {
       fill: getColor('orange');
     }
   }
