--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -1,13 +1,13 @@
 .sellers {
   padding-bottom: 72px;
   &__title {
-    font-family: getFont("Montserrat");
+    font-family: getFont('Montserrat');
     font-weight: 600;
     font-size: 20px;
     line-height: 120%;
     text-transform: uppercase;
     text-align: center;
-    color: getColor("orange");
+    color: getColor('orange');
 
     @media (min-width: 768px) {
       font-size: 24px;
@@ -15,7 +15,7 @@
     }
   }
   &__span {
-    color: getColor("black");
+    color: getColor('black');
   }
 }
 .sellers-list {
@@ -62,9 +62,9 @@
   }
   &__text {
     max-width: 306px;
-    font-family: getFont("Montserrat");
+    font-family: getFont('Montserrat');
     line-height: 129%;
-    color: getColor("black");
+    color: getColor('black');
 
     @media (min-width: 1200px) {
       max-width: 407px;
@@ -73,17 +73,18 @@
   &__btn {
     border-radius: 100px;
     padding: 12px 28px;
-    background-color: getColor("orange");
+    background-color: getColor('orange');
 
-    font-family: getFont("Montserrat");
+    font-family: getFont('Montserrat');
     font-weight: 600;
-    color: getColor("white");
+    color: getColor('white');
     margin: 0 auto;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-
-    &:hover{
-      color: getColor("orange");
+    &:hover,
+    &:focus {
+      color: getColor('orange');
       background-color: #fcf1e0;
     }
 
