--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -2,6 +2,11 @@
   <div class="container">
     <ul class="benefits-list">
       <li class="benefits-list__item">
+        <div class="benefits-svg__circle">
+          <svg class="benefits__svg" width="32" height="32">
+            <use href="./images/icons/symbol-defs.svg#icon-benefits-chocolate"></use>
+          </svg>
+        </div>
         <h2 class="benefits-list__title">Unsurpassed taste</h2>
         <p class="benefits-list__text">
           Crafted with the finest quality cocoa beans and a dedication to
@@ -11,6 +16,11 @@
         </p>
       </li>
       <li class="benefits-list__item">
+        <div class="benefits-svg__circle">
+          <svg class="benefits__svg" width="32" height="32">
+            <use href="./images/icons/symbol-defs.svg#icon-benefits-coin"></use>
+          </svg>
+        </div>
         <h2 class="benefits-list__title">Affordable price</h2>
         <p class="benefits-list__text">
           Indulge in high-quality chocolate without breaking the bank with
@@ -21,6 +31,11 @@
         </p>
       </li>
       <li class="benefits-list__item">
+        <div class="benefits-svg__circle">
+          <svg class="benefits__svg" width="32" height="32">
+            <use href="./images/icons/symbol-defs.svg#icon-benefits-shovel"></use>
+          </svg>
+        </div>
         <h2 class="benefits-list__title">Own production</h2>
         <p class="benefits-list__text">
           We take pride in our own production process, ensuring that every step
