--- a/src/partials/ingredients.html
+++ b/src/partials/ingredients.html
@@ -1,7 +1,8 @@
 <section class="ingredients">
   <div class="container">
     <h2 class="ingredients-title">
-      IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION
+      IT ALL ADDS UP TO ONE EXCEPTIONAL
+      <span class="orange">TASTE</span> SENSATION
     </h2>
     <p class="ingredients-text">
       At Simply Chocolate, we believe that the secret to exceptional chocolate
@@ -11,28 +12,230 @@
     </p>
     <ul class="ingredients-list">
       <li class="ingredients-list__item">
-        <div class="ingredients-list__thumb">
-          <img src="#" alt="Chocolate" />
+        <div class="addivities-front">
+          <picture>
+            <source
+              media="(min-width: 1200px)"
+              srcset="
+                ./images/descingredients1.jpg,
+                ./images/descingredients1@2x.jpg
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/tabingredients1.jpg,
+                ./images/tabingredients1@2x.jpg
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/tabingredients1.jpg,
+                ./images/tabingredients1@2x.jpg
+              "
+            />
+            <img
+              class="additives-card__img"
+              src="./images/tabingredients1.jpg"
+              alt="Milk Chocolate Photo"
+            />
+          </picture>
+          <h4 class="additives-card__title">MILK CHOCOLATE</h4>
         </div>
-        <p class="ingredients-list__text">MILK CHOCOLATE</p>
+        <div class="additives-hover">
+          <div class="addivities-hover__box">
+            <h5 class="additives-hover__title">Milk chocolate</h5>
+            <div class="addivities-hover-btns-block">
+              <button type="button" class="additives-hover__btn">
+                chocolate
+              </button>
+              <button type="button" class="additives-hover__btn-benefit">
+                the benefits
+              </button>
+            </div>
+            <div class="additives-scroll-block">
+              <p class="additives-hover__text">
+                Milk chocolate is a solid chocolate confectionery containing
+                cocoa, sugar and milk. It is the most consumed type of
+                chocolate. Chocolate was originally sold and consumed as a
+                beverage in pre-Columbian times. Although four-fifths of all
+                milk chocolate is sold in the United States and Europe,
+                increasingly large amounts are consumed in China and Latin
+                America.
+              </p>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="ingredients-list__item">
-        <div class="ingredients-list__thumb">
-          <img src="#" alt="Milk" />
+        <div class="addivities-front">
+          <picture>
+            <source
+              media="(min-width: 1200px)"
+              srcset="
+                ./images/descingredients2.jpg,
+                ./images/descingredients2@2x.jpg
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/tabingredients2.jpg,
+                ./images/tabingredients2@2x.jpg
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/tabingredients2.jpg,
+                ./images/tabingredients2@2x.jpg
+              "
+            />
+            <img
+              class="additives-card__img"
+              src="./images/tabingredients2.jpg"
+              alt="Milk Photo"
+            />
+          </picture>
+          <h4 class="additives-card__title">MILK</h4>
         </div>
-        <p class="ingredients-list__text">MILK</p>
+        <div class="additives-hover">
+          <div class="addivities-hover__box">
+            <h5 class="additives-hover__title">Milk</h5>
+            <div class="addivities-hover-btns-block">
+              <button type="button" class="additives-hover__btn">milk</button>
+              <button type="button" class="additives-hover__btn-benefit">
+                the benefits
+              </button>
+            </div>
+            <div class="additives-scroll-block">
+              <p class="additives-hover__text">
+                Milk is a white liquid food produced by the mammary glands of
+                mammals. It is the primary source of nutrition for young mammals
+                (including breastfed human infants) before they are able to
+                digest solid food.Early-lactation milk, which is called
+                colostrum, contains antibodies that strengthen the immune
+                system, and thus reduces the risk of many diseases. Milk
+                contains many nutrients, including protein and lactose.
+              </p>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="ingredients-list__item">
-        <div class="ingredients-list__thumb">
-          <img src="#" alt="Nuts" />
+        <div class="addivities-front">
+          <picture>
+            <source
+              media="(min-width: 1200px)"
+              srcset="
+                ./images/descingredients3.jpg,
+                ./images/descingredients3@2x.jpg
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/tabingredients3.jpg,
+                ./images/tabingredients3@2x.jpg
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/tabingredients3.jpg,
+                ./images/tabingredients3@2x.jpg
+              "
+            />
+            <img
+              class="additives-card__img"
+              src="./images/tabingredients3.jpg"
+              alt="Milk Chocolate Photo"
+            />
+          </picture>
+          <h4 class="additives-card__title">NUTS</h4>
         </div>
-        <p class="ingredients-list__text">NUTS</p>
+        <div class="additives-hover">
+          <div class="addivities-hover__box">
+            <h5 class="additives-hover__title">Nuts</h5>
+            <div class="addivities-hover-btns-block">
+              <button type="button" class="additives-hover__btn">
+                Nuts
+              </button>
+              <button type="button" class="additives-hover__btn-benefit">
+                the benefits
+              </button>
+            </div>
+            <div class="additives-scroll-block">
+              <p class="additives-hover__text">
+                Almonds, pistachios, and walnuts are some types of nuts that
+                contain healthy nutrients. When eaten as part of a
+                nutrient-dense diet, these 9 nuts may offer benefits such as
+                reducing your risk of heart disease. They’re a good source of
+                fiber, healthy fats, and plant protein. Plus, they’re great on
+                their own, paired with fruit, or added to dishes like salads,
+                desserts, and grains.
+              </p>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="ingredients-list__item">
-        <div class="ingredients-list__thumb">
-          <img src="#" alt="Semi" />
+        <div class="addivities-front">
+          <picture>
+            <source
+              media="(min-width: 1200px)"
+              srcset="
+                ./images/descingredients4.jpg,
+                ./images/descingredients4@2x.jpg
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/tabingredients4.jpg,
+                ./images/tabingredients4@2x.jpg
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/tabingredients4.jpg,
+                ./images/tabingredients4@2x.jpg
+              "
+            />
+            <img
+              class="additives-card__img"
+              src="./images/tabingredients4.jpg"
+              alt="Semi Photo"
+            />
+          </picture>
+          <h4 class="additives__card-title">SEMI - SWEET CHOCOLATE</h4>
         </div>
-        <p class="ingredients-list__text">SEMI - SWEET CHOCOLATE</p>
+        <div class="additives-hover">
+          <div class="addivities-hover__container">
+            <h5 class="additives-hover__title">semi - sweet chocolate</h5>
+            <div class="addivities-hover-btns-block">
+              <button type="button" class="additives-hover__btn">
+                sweet chocolate
+              </button>
+              <button type="button" class="additives-hover__btn-benefit">
+                the benefits
+              </button>
+            </div>
+            <div class="additives-scroll-block-last">
+              <p class="additives-hover__text">
+                Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One
+                of the best ways to gain an understanding of this type of
+                chocolate is to compare it to a different type of chocolate.
+                Semisweet is darker than milk chocolate. In a taste comparison,
+                it has a slightly bitter taste whereas milk chocolate is sweeter
+                and more mellow. This delectable flavor of chocolate is very
+                versatile.
+              </p>
+            </div>
+          </div>
+        </div>
       </li>
     </ul>
   </div>
