--- a/src/partials/ingredients.html
+++ b/src/partials/ingredients.html
@@ -1,10 +1,10 @@
 <section class="ingredients">
   <div class="container">
-    <h2 class="ingredients-title">
+    <h2 class="ingredients__title">
       IT ALL ADDS UP TO ONE EXCEPTIONAL
       <span class="orange">TASTE</span> SENSATION
     </h2>
-    <p class="ingredients-text">
+    <p class="ingredients__text">
       At Simply Chocolate, we believe that the secret to exceptional chocolate
       is in the details. From the sourcing of the finest ingredients to the
       careful crafting of each individual piece, every step of our process adds
@@ -12,7 +12,7 @@
     </p>
     <ul class="ingredients-list">
       <li class="ingredients-list__item">
-        <div class="addivities-front">
+        <div class="ingredients-front">
           <picture>
             <source
               media="(min-width: 1200px)"
@@ -36,26 +36,25 @@
               "
             />
             <img
-              class="additives-card__img"
+              class="ingredients-card__img"
               src="./images/tabingredients1.jpg"
               alt="Milk Chocolate Photo"
             />
           </picture>
-          <h4 class="additives-card__title">MILK CHOCOLATE</h4>
+          <h4 class="ingredients-card__title">MILK CHOCOLATE</h4>
         </div>
-        <div class="additives-hover">
-          <div class="addivities-hover__box">
-            <h5 class="additives-hover__title">Milk chocolate</h5>
-            <div class="addivities-hover-btns-block">
-              <button type="button" class="additives-hover__btn">
+        <div class="ingredients-thumb">
+            <h5 class="ingredients-thumb__title">Milk chocolate</h5>
+            <div class="ingredients-thumb-btns-block">
+              <button type="button" class="ingredients-thumb__btn">
                 chocolate
               </button>
-              <button type="button" class="additives-hover__btn-benefit">
+              <button type="button" class="ingredients-thumb__btn-benefit">
                 the benefits
               </button>
             </div>
-            <div class="additives-scroll-block">
-              <p class="additives-hover__text">
+            <div class="ingredients-scroll-block">
+              <p class="ingredients-thumb__text">
                 Milk chocolate is a solid chocolate confectionery containing
                 cocoa, sugar and milk. It is the most consumed type of
                 chocolate. Chocolate was originally sold and consumed as a
@@ -69,7 +68,7 @@
         </div>
       </li>
       <li class="ingredients-list__item">
-        <div class="addivities-front">
+        <div class="ingredients-front">
           <picture>
             <source
               media="(min-width: 1200px)"
@@ -93,24 +92,23 @@
               "
             />
             <img
-              class="additives-card__img"
+              class="ingredients-card__img"
               src="./images/tabingredients2.jpg"
               alt="Milk Photo"
             />
           </picture>
-          <h4 class="additives-card__title">MILK</h4>
+          <h4 class="ingredients-card__title">MILK</h4>
         </div>
-        <div class="additives-hover">
-          <div class="addivities-hover__box">
-            <h5 class="additives-hover__title">Milk</h5>
-            <div class="addivities-hover-btns-block">
-              <button type="button" class="additives-hover__btn">milk</button>
-              <button type="button" class="additives-hover__btn-benefit">
+        <div class="ingredients-thumb">
+            <h5 class="ingredients-thumb__title">Milk</h5>
+            <div class="ingredients-thumb-btns-block">
+              <button type="button" class="ingredients-thumb__btn">milk</button>
+              <button type="button" class="ingredients-thumb__btn-benefit">
                 the benefits
               </button>
             </div>
-            <div class="additives-scroll-block">
-              <p class="additives-hover__text">
+            <div class="ingredients-scroll-block">
+              <p class="ingredients-thumb__text">
                 Milk is a white liquid food produced by the mammary glands of
                 mammals. It is the primary source of nutrition for young mammals
                 (including breastfed human infants) before they are able to
@@ -124,7 +122,7 @@
         </div>
       </li>
       <li class="ingredients-list__item">
-        <div class="addivities-front">
+        <div class="ingredients-thumb-front">
           <picture>
             <source
               media="(min-width: 1200px)"
@@ -148,26 +146,26 @@
               "
             />
             <img
-              class="additives-card__img"
+              class="ingredients-card__img"
               src="./images/tabingredients3.jpg"
               alt="Milk Chocolate Photo"
             />
           </picture>
-          <h4 class="additives-card__title">NUTS</h4>
+          <h4 class="ingredients-card__title">NUTS</h4>
         </div>
-        <div class="additives-hover">
-          <div class="addivities-hover__box">
-            <h5 class="additives-hover__title">Nuts</h5>
-            <div class="addivities-hover-btns-block">
-              <button type="button" class="additives-hover__btn">
+        <div class="ingredients-thumb">
+          <div class="ingredients-thumb__box">
+            <h5 class="ingredients-thumb__title">Nuts</h5>
+            <div class="ingredients-thumb-btns-block">
+              <button type="button" class="ingredients-thumb__btn">
                 Nuts
               </button>
-              <button type="button" class="additives-hover__btn-benefit">
+              <button type="button" class="ingredients-thumb__btn-benefit">
                 the benefits
               </button>
             </div>
-            <div class="additives-scroll-block">
-              <p class="additives-hover__text">
+            <div class="ingredients-scroll-block">
+              <p class="ingredients-thumb__text">
                 Almonds, pistachios, and walnuts are some types of nuts that
                 contain healthy nutrients. When eaten as part of a
                 nutrient-dense diet, these 9 nuts may offer benefits such as
@@ -181,7 +179,7 @@
         </div>
       </li>
       <li class="ingredients-list__item">
-        <div class="addivities-front">
+        <div class="ingredients-front">
           <picture>
             <source
               media="(min-width: 1200px)"
@@ -205,26 +203,26 @@
               "
             />
             <img
-              class="additives-card__img"
+              class="ingredients-card__img"
               src="./images/tabingredients4.jpg"
               alt="Semi Photo"
             />
           </picture>
-          <h4 class="additives__card-title">SEMI - SWEET CHOCOLATE</h4>
+          <h4 class="ingredients-card__title">SEMI - SWEET CHOCOLATE</h4>
         </div>
-        <div class="additives-hover">
-          <div class="addivities-hover__container">
-            <h5 class="additives-hover__title">semi - sweet chocolate</h5>
-            <div class="addivities-hover-btns-block">
-              <button type="button" class="additives-hover__btn">
+        <div class="ingredients-thumb">
+          <div class="ingredients-thumb__box">
+            <h5 class="ingredients-thumb__title">semi - sweet chocolate</h5>
+            <div class="ingredients-thumb-btns-block">
+              <button type="button" class="ingredients-thumb__btn">
                 sweet chocolate
               </button>
-              <button type="button" class="additives-hover__btn-benefit">
+              <button type="button" class="ingredients-thumb__btn-benefit">
                 the benefits
               </button>
             </div>
-            <div class="additives-scroll-block-last">
-              <p class="additives-hover__text">
+            <div class="ingredients-scroll-block-last">
+              <p class="ingredients-thumb__text">
                 Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One
                 of the best ways to gain an understanding of this type of
                 chocolate is to compare it to a different type of chocolate.
