add footer styles and bug fixes

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,6 +9,7 @@
         a delicious cure for a bad day
       </p>
     </section>
+    <div class="footer__con">
     <section class="footer-contacts">
       <h2 class="footer-contacts__title">Contact us</h2>
       <a href="tel:+380684439426" class="footer-contacts__connection">+380 (68) 443-94-26</a>
@@ -31,8 +32,9 @@
           </a>
         </li>
       </ul>
-    </div>
   </section>
+    </div>
+</div>
     <div class="footer-down">
     
       <ul class="footer-nav-list">
